ignored unused tex stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+/presentation/slides.aux
+/presentation/slides.log
+/presentation/slides.nav
+/presentation/slides.out
+/presentation/slides.pdf
+/presentation/slides.snm
+/presentation/slides.synctex.gz
+/presentation/slides.toc
 build/*
 dist/*
 /program/build/
